MAT-9149: move role updates to separate method